[package]
name = "mobc-pg"
version = "0.1.0"
authors = ["peshwar9>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["macros"]}
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
dotenv = "0.15.0"

